; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_proto.c_local_refid.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_proto.c_local_refid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.peer = type { i64, i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32, i64 }

@INT_MCASTIF = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.peer*)* @local_refid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @local_refid(%struct.peer* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.peer*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store %struct.peer* %0, %struct.peer** %3, align 8
  %5 = load %struct.peer*, %struct.peer** %3, align 8
  %6 = getelementptr inbounds %struct.peer, %struct.peer* %5, i32 0, i32 2
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = icmp ne %struct.TYPE_3__* %7, null
  br i1 %8, label %9, label %22

9:                                                ; preds = %1
  %10 = load i32, i32* @INT_MCASTIF, align 4
  %11 = load %struct.peer*, %struct.peer** %3, align 8
  %12 = getelementptr inbounds %struct.peer, %struct.peer* %11, i32 0, i32 2
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = and i32 %10, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %9
  %19 = load %struct.peer*, %struct.peer** %3, align 8
  %20 = getelementptr inbounds %struct.peer, %struct.peer* %19, i32 0, i32 2
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %20, align 8
  store %struct.TYPE_3__* %21, %struct.TYPE_3__** %4, align 8
  br label %26

22:                                               ; preds = %9, %1
  %23 = load %struct.peer*, %struct.peer** %3, align 8
  %24 = getelementptr inbounds %struct.peer, %struct.peer* %23, i32 0, i32 1
  %25 = call %struct.TYPE_3__* @findinterface(i32* %24)
  store %struct.TYPE_3__* %25, %struct.TYPE_3__** %4, align 8
  br label %26

26:                                               ; preds = %22, %18
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %28 = icmp ne %struct.TYPE_3__* %27, null
  br i1 %28, label %29, label %39

29:                                               ; preds = %26
  %30 = load %struct.peer*, %struct.peer** %3, align 8
  %31 = getelementptr inbounds %struct.peer, %struct.peer* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = icmp eq i64 %32, %35
  br i1 %36, label %37, label %39

37:                                               ; preds = %29
  %38 = load i32, i32* @TRUE, align 4
  store i32 %38, i32* %2, align 4
  br label %41

39:                                               ; preds = %29, %26
  %40 = load i32, i32* @FALSE, align 4
  store i32 %40, i32* %2, align 4
  br label %41

41:                                               ; preds = %39, %37
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}

declare dso_local %struct.TYPE_3__* @findinterface(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
